# riverbank

./: .env.example  .gitignore  404.html  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  ROADMAP.md  alembic.ini  docker-compose.yml  gen_ref_pages.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  release.yml
SUMMARY/: index.html
concepts/: index.html
concepts/compiler-profiles/: index.html
concepts/epistemic-model/: index.html
concepts/federation/: index.html
concepts/fragment-and-artifact-model/: index.html
concepts/incremental-compilation/: index.html
concepts/multi-tenancy/: index.html
concepts/pipeline-stages/: index.html
concepts/provenance-model/: index.html
concepts/quality-gates/: index.html
concepts/rendering/: index.html
concepts/the-compiler-analogy/: index.html
contributing/: index.html
contributing/development-setup/: index.html
contributing/release-process/: index.html
contributing/running-tests/: index.html
contributing/writing-a-plugin/: index.html
docs/: SUMMARY.md  gen_ref_pages.py  index.md
docs/concepts/: compiler-profiles.md  epistemic-model.md  federation.md  fragment-and-artifact-model.md  incremental-compilation.md  index.md  multi-tenancy.md  pipeline-stages.md  preprocessing.md  provenance-model.md  quality-gates.md  rendering.md  the-compiler-analogy.md
docs/contributing/: development-setup.md  index.md  release-process.md  running-tests.md  writing-a-plugin.md
docs/getting-started/: first-corpus.md  index.md  installation.md  quickstart.md
docs/how-to/: add-a-custom-extractor.md  add-a-custom-parser.md  bulk-reprocess-a-profile.md  configure-label-studio.md  connect-a-new-source.md  deploy-on-kubernetes.md  evaluate-with-wikidata.md  explain-a-compiled-artifact.md  explain-a-conflict.md  generate-an-sbom.md  index.md  manage-tenants.md  rotate-secrets.md  run-incremental-recompile.md  tune-extraction-quality.md  use-batch-extraction.md  use-distillation-presets.md  use-document-distillation.md  use-extraction-focus.md  write-a-compiler-profile.md
docs/operations/: advisory-locks.md  audit-trail.md  backup-and-restore.md  circuit-breakers.md  helm-chart.md  index.md  multi-replica-workers.md  observability.md  scaling.md  secret-management.md  upgrading.md
docs/reference/: changelog.md  cli.md  compiler-profile-schema.md  configuration.md  error-codes.md  evaluation-methodology.md  glossary.md  index.md  metrics.md  ontology.md  plugin-api.md  sparql-helpers.md
docs/tutorials/: compile-a-policy-corpus.md  compile-a-runbook-corpus.md  index.md  ingestion-deep-dive.md  multi-tenant-setup.md  render-a-mkdocs-site.md
eval/: novel-discovery-annotations.yaml  wikidata-benchmark-1k.yaml
eval/ground-truth/: marie-curie.jsonl
eval/results/: README.md  latest.json
examples/: property-alignment-v1.yaml
examples/golden/: docs-policy-v1.yaml  wikidata-benchmark-poc.yaml
examples/markdown-corpus/: 01_introduction.md  02_concepts.md  03_architecture.md
examples/profiles/: distil-example.yaml  docs-policy-v1-corpus.yaml  docs-policy-v1-llm-biography.yaml  docs-policy-v1-llm-procedural-llm.yaml  docs-policy-v1-llm-scientific.yaml  docs-policy-v1-llm-wholedoc.yaml  docs-policy-v1-llm.yaml  docs-policy-v1-preprocessed.yaml  docs-policy-v1-semantic.yaml  docs-policy-v1.yaml  procedural-v1.yaml  wikidata-eval-v1-llm-batched.yaml  wikidata-eval-v1-llm-essential.yaml  wikidata-eval-v1-llm-minimal.yaml  wikidata-eval-v1-llm-statement.yaml  wikidata-eval-v1-no-prep.yaml  wikidata-eval-v1.yaml
getting-started/: index.html
getting-started/first-corpus/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
helm/riverbank/: Chart.yaml  values.yaml
how-to/: index.html
how-to/add-a-custom-extractor/: index.html
how-to/add-a-custom-parser/: index.html
how-to/bulk-reprocess-a-profile/: index.html
how-to/configure-label-studio/: index.html
how-to/connect-a-new-source/: index.html
how-to/deploy-on-kubernetes/: index.html
how-to/explain-a-compiled-artifact/: index.html
how-to/explain-a-conflict/: index.html
how-to/generate-an-sbom/: index.html
how-to/manage-tenants/: index.html
how-to/rotate-secrets/: index.html
how-to/run-incremental-recompile/: index.html
how-to/write-a-compiler-profile/: index.html
ontology/: pgc-shapes.ttl  pgc.ttl
operations/: index.html
operations/advisory-locks/: index.html
operations/audit-trail/: index.html
operations/backup-and-restore/: index.html
operations/circuit-breakers/: index.html
operations/helm-chart/: index.html
operations/multi-replica-workers/: index.html
operations/observability/: index.html
operations/scaling/: index.html
operations/secret-management/: index.html
operations/upgrading/: index.html
perses/: riverbank-overview.json
plans/: auto-tuning.md  best-of-both-worlds.md  documentation.md  extract-more-triples.md  learnings_1.md  ontology-pipeline-ideas.md  optimizing-knowledge-graph.md  pgvector_plus_pg_ripple.md  pre-processing.md  riverbank-implementation.md  riverbank.md  riverbed-implementation.md  riverbed.md  token-usage-optimization.md  wikidata-evaluation-implementation.md  wikidata-evaluation-strategy.md
reference/: index.html
reference/changelog/: index.html
reference/cli/: index.html
reference/compiler-profile-schema/: index.html
reference/configuration/: index.html
reference/error-codes/: index.html
reference/metrics/: index.html
reference/ontology/: index.html
reference/plugin-api/: index.html
reference/sparql-helpers/: index.html
search/: search_index.json
src/riverbank/: cli.py  config.py  plugin.py
tests/: conftest.py
tests/golden/: test_golden_corpus.py
tests/integration/: test_migrations.py
tests/unit/: test_advisory_locks.py  test_argument_graphs.py  test_artifact_deps.py  test_assumption_registry.py  test_audit_trail.py  test_bulk_reprocessing.py  test_circuit_breakers.py  test_config.py  test_consolidate.py  test_corpus_preprocessor.py  (+59 more)
tutorials/: index.html
(+129 files in other folders)
