[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "riverbank"
version = "0.15.3"
description = "Compiled knowledge-base worker for pg-ripple, pg-trickle, and pg-tide"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "rich>=13.7",
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "structlog>=24.1",
    "markdown-it-py>=3.0",
    "xxhash>=3.4",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Heavy NLP / LLM dependencies — installed when you actually want to compile
ingest = [
    "docling>=2.92",
    "instructor>=1.15",
    "spacy>=3.8",
    "coreferee>=1.4",
    "sentence-transformers>=3.1",
    "sumy>=0.11",
    "rapidfuzz>=3.9",
    "tenacity>=8.3",
]
# Human review loop — Label Studio integration
review = [
    "label-studio-sdk>=1.0",
]
# Workflow orchestration — added in Phase 2
orchestration = [
    "apscheduler>=4.0",
    "prefect>=3.6",
]
# Production hardening — v0.7.0
hardening = [
    "prometheus-client>=0.20",
    "aiobreaker>=1.0",
    "hvac>=2.0",
]
# Documentation site
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
    "mkdocs-section-index>=0.3",
    "mike>=2.1",
]
# v0.15.0: Wikidata evaluation framework
eval = [
    "requests>=2.31.0",
    "html2text>=2024.2.26",
    "rapidfuzz>=3.9",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
]
# v0.14.0: reasoning extras — SHACL validation, OWL 2 RL, RDF graph support
reasoning = [
    "pyshacl>=0.25",
    "owlrl>=6.0",
    "rdflib>=7.0",
]
# v0.10.0: optional model-backend extras
ollama = [
    "ollama>=0.2",
]
docling = [
    "docling>=2.92",
]
labelstudio = [
    "label-studio-sdk>=1.0",
]
# v0.10.0: SBOM generation and CVE scanning
sbom = [
    "cyclonedx-bom>=4.4",
    "pip-audit>=2.7",
]
# Developer tooling
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "testcontainers[postgres]>=4.7",
    "coverage[toml]>=7.5",
    "ruff>=0.4",
    "mypy>=1.10",
    "rapidfuzz>=3.9",
    "pyyaml>=6.0",
    "cyclonedx-bom>=4.4",
    "pip-audit>=2.7",
    "numpy>=1.24.0",
    "sentence-transformers>=3.1",
    "rdflib>=7.0",
    "owlrl>=6.0",
]

[project.scripts]
riverbank = "riverbank.cli:app"

[project.entry-points."riverbank.parsers"]
markdown = "riverbank.parsers.markdown:MarkdownParser"
docling = "riverbank.parsers.docling:DoclingParser"

[project.entry-points."riverbank.fragmenters"]
heading = "riverbank.fragmenters.heading:HeadingFragmenter"
semantic = "riverbank.fragmenters.semantic:SemanticFragmenter"
llm_statement = "riverbank.fragmenters.llm_statement:LLMStatementFragmenter"
direct = "riverbank.fragmenters.direct:DirectFragmenter"

[project.entry-points."riverbank.extractors"]
noop = "riverbank.extractors.noop:NoOpExtractor"
instructor = "riverbank.extractors.instructor_extractor:InstructorExtractor"

[project.entry-points."riverbank.connectors"]
filesystem = "riverbank.connectors.fs:FilesystemConnector"

[project.entry-points."riverbank.reviewers"]
file = "riverbank.reviewers.file:FileReviewer"
label_studio = "riverbank.reviewers.label_studio:LabelStudioReviewer"

[tool.hatch.build.targets.wheel]
packages = ["src/riverbank"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/riverbank"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
